Added composition modules

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,10 @@ application {
 
 dependencies {
 
+    implementation project(":feature-semver")
+    implementation project(":provider")
+    implementation project(":provider-git")
+
     implementation 'commons-cli:commons-cli:1.5.0'
 
 }
