--- a/tooling-test/build.gradle
+++ b/tooling-test/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 dependencies {
 
-    api "org.jetbrains.kotlin:kotlin-test-junit"
+    api "org.jetbrains.kotlin:kotlin-test"
     api "org.junit.jupiter:junit-jupiter:5.8.2"
     api "org.mockito.kotlin:mockito-kotlin:4.0.0"
     api "org.mockito:mockito-junit-jupiter:4.4.0"
