Added postfix guarding when differs from provided in arguments

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -57,6 +57,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            macos/taggy
-            ubuntu/taggy
-            windows/taggy.exe
+            macos/taggy-mac
+            ubuntu/taggy-linux
+            windows/taggy-windows.exe
